# Madrasa_app

./: .dockerignore  .env  .env.example  .environ.example  .gitignore  API_TESTING_GUIDE.md  Additional_Features.py  Dockerfile  FASTAPI_FIX_REPORT.md  FIX_REPORT.md  MIGRATION_NOTES.md  Madrasha app.rar  PRODUCTION_READINESS_SUMMARY.md  PR_SUMMARY.md  README.md  REVIEW_SUMMARY.md  ROBUST_FIX_REPORT.md  Reset_Passwords.py  Reset_pass.py  SECURITY_FIXES.md  SERVER_RUNNER_README.md  TEST_INSTRUCTIONS.md  TEST_RUN_SUMMARY_20250817_103219.md  Users_Backend.py  additional.py  admin.py  app.py  autostart.sh  babel.cfg  config.py  cookies.txt  create_people.py  csrf_protection.py  db_people.py  dev.py  docker-compose.yml  enc_people_db.py  forms.py  gunicorn.conf.py  helpers.py  (+34 more)
.systemd/: madrasa-app.service
.systemfiles/: SYSTEMD_README.md  madrasa-app.timer  nginx.conf  setup_systemd.sh
app/: main.py
config/: __init__.py  config.py  env_validator.py  hypercorn.toml  server_config.json
config/docker/: docker-compose.yml
config/hosting/: hypercorn.toml  nginx.conf
config/keydb/: keydb.conf
config/mysql/: books.sql  create_dummy.sql  create_tables.sql  madrasa_members.sql
config/otel/: collector-config.yaml
content/: privacy_policy.md  terms.md
database/: __init__.py  backup_db.py  database_utils.py  db_utils.py
database/commands/: add_metadata_to_logs.sql  books.sql  create_dummy.sql  create_tables copy.sql  create_tables.sql  madrasa_members.sql
keydb/: __init__.py  keydb.conf  keydb_utils.py
madrasa_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maintenance/: backup_db.py  maintenance.py
observability/: asgi_middleware.py  db_tracing.py  otel_setup.py  otel_utils.py
routes/: others.py  routine.py
routes/admin_routes/: __init__.py  auth.py  auth_admin.py  auxiliary.py  exam_results.py  members_admin.py  notices_admin.py  views.py
routes/api/: __init__.py  additionals.py  auth.py  auth_fast.py  core.py  files.py  others.py  pass_reset.py  payments.py  routine.py
routes/user_routes/: __init__.py  auth.py  core.py  example.py  payments.py  payments.shurjopay  payments_shurjopay.py
routes/web_routes/: __init__.py  views.py
static/css/: accordion.css  admin.css  custom.css  edit_account.css  info.css
static/js/: admin.js  custom.js  donate.js  edit_account.js  info.js
templates/: 404.html  Server_Status.html  account_manage.html  base.html  contact.html  donate.html  edit_account.html  home.html  info.html  maintenance.html  privacy.html  status.html  terms.html
templates/admin/: add_member.html  add_routine.html  base.html  csrf_error.html  dashboard.html  events.html  exam_results.html  exams.html  info.html  interactions.html  login.html  logs.html  madrasa_pictures.html  manage_member.html  members.html  notice.html  payment_form.html  power.html  routine.html  routines.html  status.html
test/: API_TEST_CHECKLIST.md  README.md  api_test_report.json  requirements.txt  run_all_tests.py  run_send_code_tests.py  start_server_for_testing.py  start_test_server.sh  test_api_curl.sh  test_api_endpoints.py  test_api_mock_demo.py  test_async_operations.py  test_env_validator.py  test_external_access.py  test_functions.py  test_keydb_connection.py  test_keydb_docker.py  test_middleware.py  test_mysql_connection.py  test_opentelemetry.py  test_password_hash.py  test_security.py  test_user_routes.py
test/api/: test_api_endpoints.py  test_api_mock_demo.py  test_send_code_debug.py
test/keydb/: test_keydb_connection.py
test/mysql/: __init__.py  test_mysql_connection.py  test_mysql_pytest.py  test_sqlalchemy.py  test_sqlalchemy_connection.py
test/otel/: test_basic.py
test/test_keydb/: test_keydb_connection.py
tools/: clean_env.py  create_keys.py
uploads/exam_results/: index.json
uploads/functions/: dummy.txt
uploads/gallery/: index.json
uploads/notices/: index.json
utils/: __init__.py  csrf_protection.py  env_validator.py  helpers.py  logger.py
utils/helpers/: csrf_protection.py  fastapi_helpers.py  helpers.py  improved_functions.py  improved_funtions.py  logger.py  session_utils.py
utils/keydb/: keydb_utils.py
utils/mysql/: backup_db.py  database.py  (+2 more)
(+22 files in other folders)
