[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madrasa-app"
version = "1.0.0"
description = "A comprehensive Madrasa management system with admin dashboard, member management, and payment tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tahir Jamil", email = "tahirjamil@example.com"},
    {name = "Tareq Jamil", email = "tareqjamil@example.com"}
]
maintainers = [
    {name = "Tahir Jamil", email = "tahirjamil@example.com"},
    {name = "Tareq Jamil", email = "tareqjamil@example.com"}
]
keywords = ["madrasa", "education", "management", "islamic", "school", "admin", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/tahirjamil/madrasa-app"
Documentation = "https://madrasa-app.readthedocs.io/"
Repository = "https://github.com/tahirjamil/madrasa-app.git"
"Bug Tracker" = "https://github.com/tahirjamil/madrasa-app/issues"
"Changelog" = "https://github.com/tahirjamil/madrasa-app/blob/main/CHANGELOG.md"

[project.scripts]
madrasa-app = "run_server:main"
madrasa-admin = "maintenance:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["routes*", "utils*", "config*", "templates*", "static*", "uploads*", "translations*"]
exclude = ["test*", "tools*", "logs*", "temp*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.webp", "*.ico", "*.json", "*.mo", "*.po"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["routes", "utils", "config"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["test"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["routes", "utils", "config"]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[project.gui-scripts]
madrasa-gui = "gui:main"
